--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Code&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
 
 body {
-    position: relative;
-    font-family: sans-serif;
-    overflow: hidden;
-    top: 0;
-    padding: 0;
-    margin: 0;
+  position: relative;
+  font-family: 'Cairo', sans-serif;
+  overflow: hidden;
+  top: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .container {
@@ -31,10 +31,10 @@ body {
 
 #submit {
   position: absolute;
-  width: 3.5vh;
-  height: 3.0vh;
-  bottom: 10vh;
-  left: 2.0vh;
+  width: 1.5vh;
+  height: 1.5vh;
+  bottom: 10.6vh;
+  left: 8.3vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
@@ -45,10 +45,10 @@ body {
 
 #disconnect {
   position: absolute;
-  width: 3.5vh;
+  width: 1vh;
   height: 3.0vh;
-  bottom: 10vh;
-  right: 2.0vh;
+  bottom: 22.8vh;
+  right: 5.75vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
@@ -59,10 +59,10 @@ body {
 
 #volumeUp {
   position: absolute;
-  width: 3.8vh;
-  height: 3.7vh;
-  bottom: 29.5vh;
-  right: 0.9vh;
+  width: 1vh;
+  height: 1.7vh;
+  bottom: 15.8vh;
+  left: 3.2vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
@@ -73,10 +73,10 @@ body {
 
 #volumeDown {
   position: absolute;
-  width: 3.8vh;
-  height: 3.6vh;
-  bottom: 18.5vh;
-  right: 0.9vh;
+  width: 1vh;
+  height: 1.7vh;
+  bottom: 12.8vh;
+  left: 3.2vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
@@ -87,10 +87,10 @@ body {
 
 #increaseradiochannel {
   position: absolute;
-  width: 3.8vh;
-  height: 3.8vh;
-  bottom: 29.5vh;
-  left: 0.8vh;
+  width: 1.5vh;
+  height: 1.5vh;
+  bottom: 10.6vh;
+  left: 6.6vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
@@ -101,10 +101,10 @@ body {
 
 #decreaseradiochannel {
   position: absolute;
-  width: 3.8vh;
-  height: 3.6vh;
-  bottom: 18.5vh;
-  left: 0.8vh;
+  width: 1.5vh;
+  height: 1.5vh;
+  bottom: 10.6vh;
+  left: 10vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
@@ -115,10 +115,10 @@ body {
 
 #poweredOff {
   position: absolute;
-  width: 3.3vh;
-  height: 2.9vh;
-  bottom: 50vh;
-  left: 0.0vh;
+  width: 1vh;
+  height: 3.0vh;
+  bottom: 22.8vh;
+  right: 6.9vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
@@ -134,8 +134,8 @@ body {
 
 .channel {
   position: absolute;
-  bottom: 24vh;
-  left: 5.3vh;
+  bottom: 14.5vh;
+  left: 4.3vh;
   background: none;
 }
 
@@ -151,13 +151,90 @@ body {
 .channel input {
   text-align: center;
   border: none;
-  font-size: 25px;
+  font-size: 22px;
   background: none;
   outline: none;
-  font-family: 'Fira Code', monospace;
+  font-family: 'Cairo', monospace;
   width: 5vw;
 }
 
 ::-webkit-inner-spin-button {
   display: none;
+}
+
+#submit:hover::before { 
+  content: attr(title);
+  display: block; 
+  position:relative;
+  top:-30px;
+  font-size:12px;
+  color:white;
+  background-color:rgb(255 0 0 / 0%);
+  padding:2px;
+}
+
+#disconnect:hover::before { 
+  content: attr(title);
+  display: block; 
+  position:relative;
+  top:-30px;
+  font-size:12px;
+  color:white;
+  background-color:rgba(0, 0, 0, 0);
+  padding:2px;
+}
+
+#volumeUp:hover::before { 
+  content: attr(title);
+  display: block; 
+  position:relative;
+  top:-30px;
+  font-size:12px;
+  color:white;
+  background-color:rgba(0, 0, 0, 0);
+  padding:2px;
+}
+
+#volumeDown:hover::before { 
+  content: attr(title);
+  display: block; 
+  position:relative;
+  top:-30px;
+  font-size:12px;
+  color:white;
+  background-color:rgba(0, 0, 0, 0);
+  padding:2px;
+}
+
+#increaseradiochannel:hover::before { 
+  content: attr(title);
+  display: block; 
+  position:relative;
+  top:-30px;
+  font-size:12px;
+  color:white;
+  background-color:rgba(0, 0, 0, 0);
+  padding:2px;
+}
+
+#decreaseradiochannel:hover::before { 
+  content: attr(title);
+  display: block; 
+  position:relative;
+  top:-30px;
+  font-size:12px;
+  color:white;
+  background-color:rgba(0, 0, 0, 0);
+  padding:2px;
+}
+
+#poweredOff:hover::before { 
+  content: attr(title);
+  display: block; 
+  position:relative;
+  top:-30px;
+  font-size:12px;
+  color:white;
+  background-color:rgba(0, 0, 0, 0);
+  padding:2px;
 }
